Fix the `nav svg` rule not being wrapped in a media query

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -402,8 +402,10 @@ abbr[title] {
     border-bottom: 1px dotted;
 }
 
-nav svg {
-    filter: invert(100%);
+@media only screen and (prefers-color-scheme: dark) {
+    nav svg {
+        filter: invert(100%);
+    }
 }
 
 @media only percy {
